<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".loginActivity"
    android:padding="25dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_marginTop="10dp"
        android:layout_gravity="center"

        android:text="@string/titulo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="20dp" />


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_us"
            app:boxCornerRadiusBottomEnd="@dimen/radious_text_field"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_contasena"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_con"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/icono_verde">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_google"
        android:gravity="center"
        android:text="@string/btn_google"
        android:textAlignment="center"
        android:textColor="#2B2A2A"
        android:textIsSelectable="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_crearCuenta"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ic_crear_cuenta"
            android:text="@string/btn_crear"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="@dimen/radius_btn"/>

        <Button
            android:id="@+id/btn_Inciar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_crear_cuenta"
            android:text="@string/btn_iniciar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="@dimen/radius_btn" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_olvi_contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_olividar_contra"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textStyle="bold" />

</LinearLayout>