<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_dialog"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewHeader"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="25dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_titulo"
                android:textColor="@color/verde"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_Accion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/radious_text_field"
                app:boxCornerRadiusBottomStart="@dimen/radious_text_field"
                app:boxCornerRadiusTopEnd="@dimen/radious_text_field"
                app:boxCornerRadiusTopStart="@dimen/radious_text_field">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_AccionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="5"
                    android:maxLength="60"
                    android:focusable="true"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_detalles"
                android:textColor="@color/verde"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_Descripcion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="191dp"
                android:layout_marginBottom="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/radious_text_field"
                app:boxCornerRadiusBottomStart="@dimen/radious_text_field"
                app:boxCornerRadiusTopEnd="@dimen/radious_text_field"
                app:boxCornerRadiusTopStart="@dimen/radious_text_field">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_DescripcionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="5"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="190"
                    android:maxLines="5"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>



            <ImageView
                android:id="@+id/subirImagen"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txt_fecha"
                android:textColor="@color/verde"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_Accionfecha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/radious_text_field"
                app:boxCornerRadiusBottomStart="@dimen/radious_text_field"
                app:boxCornerRadiusTopEnd="@dimen/radious_text_field"
                app:boxCornerRadiusTopStart="@dimen/radious_text_field">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_AccionfechaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:focusable="true"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>